# template-python-lambda-layer-by-terraform

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  sam.yml  terraform.sample.tfvars  terraform.tf
.github/workflows/: deploy.yml
layers/base/: pyproject.toml
modules/layer/: outputs.tf  resources.tf  terraform.tf  variables.tf
