[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.26.59"
boto3-stubs = {version = "1.26.59", extras = ["dynamodb", "s3", "sqs"]}
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
